[package]
name = "bridge_line_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
serde_json = "1.0"
serde = "1.0"
erased-serde = "0.3"
once_cell = "*"
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["full"] }