[package]
name = "bridge_line_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
once_cell = "*"
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["full"] }
axum-server = {version = "0.4.5", features = ["tls-rustls"]}