[package]
name = "bridge_line_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
once_cell = "*"
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["full"] }
axum-server = {version = "0.4.5", features = ["tls-rustls"]}
sqlx = {version ="0.6.2", features = ["runtime-tokio-rustls","sqlite","chrono"]}
chrono = {version = "*", features = ["serde"]}
#duration-str = "0.5.0"
rand = "*"
toml = "*"
async-recursion = "1.0.2"